# Projects_Challenges

./: .gitignore  README.md
.devcontainer/: devcontainer.json
40WeeksOfPython/: Python_Week_1.py  Python_Week_10.py  Python_Week_11.py  Python_Week_12.py  Python_Week_13.py  Python_Week_14.py  Python_Week_15.py  Python_Week_16.py  Python_Week_17.py  Python_Week_18.py  Python_Week_19.py  Python_Week_2.py  Python_Week_20.py  Python_Week_3.py  Python_Week_4.py  Python_Week_5.py  Python_Week_7.py  Python_Week_8.py  Python_Week_9.py
DIM_PRO_CHALLS_OF_WEEK/: DIM_Python_Challenge_Week_1.py  notebooks_DIM_Pro_Data_Analysis_Week_1.ipynb  notebooks_DIM_Pro_Data_Cleaning_Week_1.ipynb
Data Analysis Challenges/: week1.ipynb  week2.ipynb  week3.ipynb  week4.ipynb  week5.ipynb  week6.ipynb  week7.ipynb  week8.ipynb
ProPythonChallenges/: CalculateWorkingDays.py  DictionaryKeyCheck.py  DoubleTheNumbers.py  ExtractVowels.py  FilterPositiveNumbers.py  FindingEmailAddresses.py  ListAccessSafety.py  MatchingBasicPatterns.py  MergeNestedDictionaries.py  PrimeNumberSieve.py  ReplacingCharacters.py  SafeDivison.py  UniqueSquares.py  ValidatePhoneNumbers.py
ProPythonCodeReviews_FixTheErrors/: Challenge_1.py  Challenge_10.py  Challenge_11.py  Challenge_12.py  Challenge_13.py  Challenge_14.py  Challenge_2.py  Challenge_3.py  (+6 more)
personal_projects/real_time/real_time/: docker-compose.yml  main.py  pyproject.toml  requirements.txt
taipy/tpy1/tpy1/: Dockerfile  pyproject.toml
taipy/tpy1/tpy1/notebooks/: model_prototyping.ipynb
taipy/tpy1/tpy1/tpy1/: dashboard.py  data_info.py  plotting.py
(+140 files in other folders)
